--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ title:               Poole
 tagline:             The Jekyll Butler
 url:                 http://getpoole.com
 paginate:            1
-baseurl:             ""
+baseurl:             "https://neghena.github.io/GPS_Autonomous_Nav/"
 
 # Assets
 #
